_sass/base/_responsive.scss
//**
// Responsive Styles
//**



@include mobilefirst($big-break) {
  html, body {
    font-size: $base-font-size + 2;
  }
  // Adjust line-height
  .text--body,
  .list--unordered__item,
  .list--unordered__item:before {
    line-height: $line-height * 1.5;
  }
  .header {
    display: none;
  }
  .sidebar__header {
    margin-bottom: $margin;
  }
  .sidebar__toggle {
    display: block; // hide the menu button
  }
  .nav--main__item a {
    height: $baseline-height * 3;
    line-height: $line-height * 3;
  }
  .content {
    width: auto;
    margin-left: $sidebar-width;
    margin-top: 0;
  }
  .article-wrapper {
    max-width: 960px;
    padding: $padding;
  }
  .page__title {
    font-size: $base-font-size * 3;
    line-height: $line-height * 3;
  }
  .text--body {
    font-size: $base-font-size + 2;
  }
  .list--grid {
    width: $baseline-height * 21;
  }
  .links--personal {
    flex-direction: column;
    width: 20%;
    padding: $padding;
    float: right;
    margin-left: $margin;
    margin-bottom: $margin;
  }
  .links__item {
    padding: $padding $padding/2;
  }
  .fancy {
    font-size: $base-font-size + 4;
  }
  .masthead--error {
    padding: $padding*3 0;
  }
}

@include responsive($big-break) {
  .links--personal {
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    margin-left: 0;
    margin-bottom: $margin;
    float: none;
    padding: 0;
  }
  .links__item {
    padding-left: 0;
    padding-right: 0;
  }
  .project__logo {
    max-height: 40%;
    max-width: none;
  }
}

@include mobilefirst(960px) {
  .newline {
    display: none;
  }
  .project__bg, .project__intro, .project__title {
    display: block;
  }
}


@include responsiveheight(460px) {
  // e.g. iPhone 5 rendering screen is short
  .content {
    overflow-y: scroll;
  }
  .sidebar {
    overflow-y: scroll !important;
  }
  .sidebar__footer {
    position: relative;
  }
}



@include responsive($small-break) {
  // e.g. iPhone, mobile
  body {
    overflow-x: hidden;
  }


}

